--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       font-family: Arial, sans-serif;
       text-align: left;
       padding-top: 50px;
+      padding-left: 20px;
     }
     a {
       color: #007BFF;
