--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <h1>Artist: Jane Doe</h1>
+  <h1>Jane Doe</h1>
   <p>
     View the portfolio: 
     <a href="https://example.com/portfolio" target="_blank">
